--- a/style.scss
+++ b/style.scss
@@ -535,8 +535,6 @@
       flex-wrap: wrap !important;
       // border: 1px solid green;
 
-      
-
       .phone {
         width: 50% !important;
         // border: 1px solid red;
@@ -553,23 +551,240 @@
     }
   }
 
-  .block-6{
+  .block-6 {
     width: 100% !important;
     height: 100%;
     // border: 1px solid red;
     flex-direction: column;
 
-    .box{
+    .box {
       width: 100% !important;
       // border: 1px solid green;
+
+      h1 {
+        font-size: 30px !important;
+      }
+      p {
+        font-size: 15px !important;
+      }
+    }
+  }
+}
+
+@media (min-width: 600px) and (max-width: 900px) {
+
+  .navbar{
+    // border: 1px solid red;
+  }
+  .block {
+    width: 100% !important;
+    height: 100%;
+    // border: 1px solid red;
+    .box{
+      width: 50% !important;
+      // border: 1px solid green;
+      height: 100%;
+      .pasta{
+        // border: 1px solid red;
+        margin-left: 175px;
+        width: 600px !important;
+        height: 100%;
+      }
+    }
+
+    
+  }
+
+  .block-2{
+    width: 100% !important;
+    // border: 1px solid red;
+    height: 100%;
+
+    .box-2{
+      width: 50%;
+      height: 100%;
+      // border: 1px solid green;
+      text-align: center;
+
+      p{
+        font-size: 15px !important;
+        margin-left: 50px;
+      }
+
+      img{
+        width: 550px !important;
+        height: 100%;
+        margin-right: 80px;
+      }
+    }
+  }
+
+  .block-3{
+    width: 100% !important;
+    // border: 1px solid red;
+
+    h1{
+      font-size: 25px !important; 
+    //  border: 1px solid red;
+     position: absolute;
+     left: 32% !important;
+    }
+
+    .card{
+      width: 33.5% !important;
+      // border: 1px solid red;
+    }
+
+    .meal{
+      width: 200px !important;
+    }
+
+    .avakado{
+      width: 200px !important;
+    }
+  }
+
+  .block-4{
+    width: 100% !important;
+    // border: 1px solid red;
+
+    h1{
+      font-size: 25px !important; 
+      //  border: 1px solid red;
+       position: absolute;
+       left: 32% !important;
+    }
+
+    .card-2{
+      width: 30.5% !important;
+      // border: 1px solid red;
+
+      h2{
+        // border: 1px solid red;
+        font-size: 18px !important;
+      }
+
+      img{
+        width: 90% !important;
+      }
+
+      button{
+        width: 150px !important;
+        // border: 1px solid red !important;
+        font-size: 10px !important;
+      }
+
+      h3{
+        position: absolute;
+        right: 20px;
+        bottom: 80px;
+      }
+
+      .star{
+        position: absolute;
+        bottom: 30px;
+      }
+    }
+  }
+
+  .block-5{
+    width: 100% !important;
+    // border: 1px solid red;
+
+    .box{
+      width: 50% !important;
+      // border: 1px solid green; 
+
+      .cola{
+        width: 430px !important;
+        position: absolute;
+        bottom: 100px;
+        left: -30px;
+      }
+
+      .phone{
+        width: 200px !important;
+      }
+
+      .social{
+        width: 280px;
+        position: absolute;
+        bottom: 150px;
+        right: 50px;
+      }
+
+      h1{
+        font-size: 35px !important;
+      }
+
+      .text{
+        width: 100% !important;
+        font-size: 15px !important;
+        position: absolute;
+        bottom: 300px;
+        left: 230px;
+      
+      }
+    }
+  }
+
+  .block-6{
+    width: 100% !important;
+    // border: 1px solid red;
+
+    .box{
+      width: 50% !important;
+      height: 100%;
+      // border: 1px solid green;
+
+      img{
+        width: 500px !important;
+        height: 100%;
+        margin-right: 20px;
+      }
 
       h1{
         font-size: 30px !important;
       }
+
       p{
         font-size: 15px !important;
       }
-    }
 
+
+    }
+  }
+
+  .block-7{
+    width: 100% !important;
+    // border: 1px solid red;
+
+    .box{
+      width: 150px !important;
+      // border: 1px solid green;
+
+      .fruit{
+        // border: 1px solid red;
+        // height: 100px !important;
+        width: 150px !important;
+        position: absolute !important;
+        top: 0 !important;
+        left: 30px !important;
+      }
+
+      .info{
+       opacity: 0;
+      }
+    }
+   .card{
+    width: 20% !important;
+    // border: 1px solid red;
+    h2{
+      font-size: 20px !important;
+    }
+    p{
+      font-size: 15px !important;
+    }
+   }
   }
 }
